# honolulu_audio_engine

./: .gitignore  CMakeLists.txt  README.md  example.cpp  sample.cpp  setup_env_example.sh
.github/workflow/: build_on_mac.yml
.github/workflows/: build_on_mac.yml  build_on_ubuntu.yml  cmake.yml
engine/: CMakeLists.txt
engine/include/: hae_audio_data.hpp
engine/src/: hae.cpp
honolulu_audio_engine/: CMakeLists.txt  README.md
honolulu_audio_engine_test/: CMakeLists.txt
honolulu_audio_engine_test/test/: CMakeLists.txt
include/: hae.hpp  hae_audio_data.hpp
src/: hae.cpp  main.cpp
test/: CMakeLists.txt  hae_audio_data_test.cpp  hae_test.cpp
test/src/: test.cpp
